--- a/Css/main.css
+++ b/Css/main.css
@@ -14,6 +14,8 @@
 .superior {
     padding-inline: 1.5rem;
     padding-top: 2rem;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
     background: white;
 }
 
